VERSION 5.7.5
-------------

- Packaging. Correct PyInstaller packaging.

- HDF5. Correct Show Info not working with PySide 6.

- GUI. Elements Info update line emission ratios when changing energy without need to ckick on the periodic table.

VERSION 5.7.4
-------------

- HDF5. Improved support of external links PR #891.

- HDF5. Single MCA selections accompanied by associated motor positions (if any).

- XRF. Make more explicit the Fast XRF fit is a linear fit.

- ROI Imaging. Clearer tool tips.

VERSION 5.7.3
-------------

- Allow project build and test under Python 3.11

- HDF5. Improved support of external links.

- HDF5. Simplify single MCA selection in multidimensional datasets.

- XRF. Enable copy to clipboard from the tables.

- GUI. Add -log(y/yactive) to the list of normalization options.

- IO. Support LabSpec6 exported maps.

VERSION 5.7.2
-------------

- IO. Robust access to HDF5 files while being written.

- IO. Support ProSpect v1.1.36 

- ROI Imaging. Double click on Stack Window adds spectrum to MCA  window. 

- Support building of frozen binaries with PyInstaller

VERSION 5.7.1
-------------

- Correct GUI issue with the combination Python 3.10 and PyQt5 

VERSION 5.7.0
-------------

- Support PySide2 and PySide6.

- Drop Qt4 support (PyQt4 and PySide)

- Drop Object3D module.

VERSION 5.6.7
-------------

- Graphics. Fast XRF fitting results visualization not working with matplotlib 3.5.0

VERSION 5.6.6
-------------

- Graphics. Recent versions of Matplotlib do not support picker=None.

- IO. Support AXAS-D format independently of using ","  or "." as decimal separator.

- IO. Calculate live time as elapsed time * OCR/ICR in AXAS-D format

VERSION 5.6.5
-------------

- PyMcaBatch. Prevent the use of the input directory as output directory when
the input file list is a single HDF5 file.

- PyMcaBatch. Allow XRF batch fitting of a single entry in an HDF5 file containing
multiple maps.

- PCA. Deal with NaNs in stacks of spectra.
